test/expected/explain_ld-knr.out
explain long double x
        ^
9: error: "long double" is illegal for built-in type until C89
